src/objects/Standard_Country_Lookup__c.object
<CustomObject>
    <description>This object is created to map MSI country list to Zebra country list</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_LOV__c</fullName>
        <label>Source LOV</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Standard Country Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Source_LOV__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Standard Country Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Country Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>